Feat : added weather

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_UNSPLASH_API_KEY=-nrWpRE1xWm6bZl_FNVog84yA4eaEGs_Xmxh5964wZA
+REACT_APP_OPENWEATHER_API_KEY=bb86b92a1b14e9bdb33db810d519a00d
